# pillar-2026

./: .env.example  .gitignore  Elicitation_Handling_Technical_Design.docx  README (1).md  README.md  WALKTHROUGH.md  api.py  assist.py  builder.py  complete_mcp_implementation.py  design.md  dummy_dual_process_test.py  elicitation_bridge.py  elicitation_handler.py  elicitation_node.py  env.example  graph_nodes.py  graph_runner.py  local_test_elicitation.py  main.py  mcp_session_manager.py  moniter.py  ps_guard.py  pyproject.toml  redis_module.py  requirements (1).txt  session_manager.py  session_manager_dig.mer  state.py  test1.py  test_client.py  test_elicitation.py  url_elicitation_handler.py
agent_orchestrator_poc/: api_server.py  graph_orchestrator.py  main.py  models.py
